Fix margin on row overflow (#1411)

--- a/pages/settings/settings.module.css
+++ b/pages/settings/settings.module.css
@@ -2,14 +2,11 @@
     margin: 1rem 0;
     justify-content: start;
     font-size: 110%;
+    gap: 0 0.5rem;
 }
 
 .nav :global .nav-link {
     padding-left: 0;
-}
-
-.nav :global .nav-item:not(:first-child) {
-    margin-left: 1rem;
 }
 
 .nav :global .active {
